# well-thats-just-prime

./: CMakeLists.txt  README.md  factorizer_test  main.cpp
src/: factorizer  factorizer.cpp  factorizer.hpp
tests/: factorizer_test.cpp  hello_test.cpp
